Fix empty space in EditInPlace control
Using a grid template was adding an empty column and making empty
space in the grid, making the text box too short. Just use flexbox.

--- a/src/components/Form/Controls/EditInPlace/EditInPlace.module.css
+++ b/src/components/Form/Controls/EditInPlace/EditInPlace.module.css
@@ -25,8 +25,7 @@ limitations under the License.
 }
 
 .controls {
-  display: grid;
-  grid-template-columns: 1fr auto;
+  display: flex;
   gap: 15px;
 }
 
